# manga109-dataviewer

./: .gitignore  Dockerfile  Makefile  README.md  app.py  config.yml  docker-compose.yml  pyproject.toml
src/: drawer.py  eda.py  typing.py
